# simple_projects

./: .clang-format  README.md
producer-consumer/: CMakeLists.txt  README.md  main.c
sdl-basics/: CMakeLists.txt  app.cpp  app.hpp  color-code.hpp  main.cpp
